# hermit

./: .gitignore  README.md  README_cn.md  main.py  pyproject.toml
.agents/skills/hermit-search/: SKILL.md
docs/: api.md  design.md  ingestion.md  markdown-chunking.md  models.md  qdrant_standalone.md  retrieval.md  skill-distribution.md  storage.md
hermit/: app.py  cli.py  config.py  models.py
hermit/api/: routes.py  schemas.py
hermit/ingestion/: chunker.py  scanner.py  task_queue.py  watcher.py
hermit/retrieval/: embedder.py  reranker.py  searcher.py
hermit/storage/: metadata.py  model_signature.py  qdrant.py  qdrant_docker.py  quantizer.py  registry.py
problems/: qdrant-port-6333-conflict.md
tests/: conftest.py  test_chunker.py  test_e2e_deployment.py  test_e2e_standalone.py  test_kb_cli.py  test_model_signature.py  test_perf_changes.py  test_perf_search.py  test_qdrant_modes.py  test_scan_and_queue.py
tests/fixtures/md/: atx_headings.md  blockquote.md  fenced_blocks.md  horizontal_rule.md  list_block.md  math_blocks.md  mixed_doc.md  setext_heading.md  standalone_image.md  table_block.md  yaml_frontmatter.md
