[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermit"
version = "0.1.0"
description = "Self-contained local semantic search service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "qdrant-client>=1.13",
    "fastembed>=0.6",
    "watchdog>=6",
    "huggingface_hub>=0.20",
]

[project.scripts]
hermit = "hermit.cli:main"

[tool.hatch.build.targets.wheel.force-include]
".agents/skills/hermit-search" = "hermit/_skills/hermit-search"
